--- a/src/app/pages/add-member/add-member.page.scss
+++ b/src/app/pages/add-member/add-member.page.scss
@@ -276,3 +276,16 @@
         }
     }
 }
+
+.start-date-modal {
+    ion-content {
+        --padding-start: 0;
+        --padding-end: 0;
+        --padding-top: 0;
+        --padding-bottom: 0;
+    }
+
+    ion-datetime {
+        width: 100%;
+    }
+}
