--- a/src/app/pages/members/update-payment/update-payment.component.html
+++ b/src/app/pages/members/update-payment/update-payment.component.html
@@ -31,11 +31,13 @@
 
             <div class="form-group">
                 <label>Payment Date</label>
-                <input 
-                    type="date" 
-                    class="form-input" 
+                <ion-datetime
                     [(ngModel)]="paymentDate"
-                />
+                    name="paymentDate"
+                    presentation="date"
+                    [value]="paymentDate"
+                    (ionChange)="onPaymentDateChange($event)"
+                ></ion-datetime>
             </div>
 
             <div class="form-group">
